dataset/CASSANDRA/CASSANDRA-4090.txt
Summary:
cqlsh can't handle python being a python3
Description:
cqlsh fails to run when python is a Python 3, with this error message:
andrew@spite:~/src/cassandra-trunk/bin $ ./cqlsh 
  File "./cqlsh", line 97
    except ImportError, e:
                      ^
SyntaxError: invalid syntax
andrew@spite:~/src/cassandra-trunk/bin $ 
The error occurs because the cqlsh script checks for a default installation of python that is older than a certain version, but not one newer that is incompatible (e.g. Python3). To fix this, I update the logic to only run python if it's a version at least 2.5 but before 3.0 If this version of python is in that range then role with it, otherwise try python2.6, python2.7, then python2.5 (no change from before).
This is working on my installation, where python executes python 3.2.2 and doesn't break backwards compatibility to distributions that haven't made the jump to Python3 as default yet.
Status:
RESOLVED
Priority:
Low
Resolution:
Fixed
Affects_version:

Fix_version:
1.0.10, 1.1.0
Component:
Legacy/Tools
Label:
cqlsh
Environment:
python, archlinux
Attachment number:
0
Assignee:
Andrew Ash
Reporter:
Andrew Ash
Create date:
27/Mar/12 07:34
Update date:
16/Apr/19 09:32
Resolved date:
03/Apr/12 16:12
